2015-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (MagickSignalHandlerMessage): Fix Coverity 44725
	"Logically dead code".

	* magick/log.c (DestroyLogInfo): Silence Coverity 53659 and 53661
	"Data race condition".
	(ReadLogConfigureFile): Silence Coverity 53660 "Data race
	condition".

	* magick/effect.c (DespeckleImage): Fix error handling issue
	caused by shadowed variable.  Fixes Coverity 10099 "Logically dead
	code".

	* magick/command.c (TimeImageCommand): Fix Coverity 10097
	"Logically dead code".

	* magick/attribute.c (ReadMSBLong): Hopefully silence Coverity
	10276 "Unintended sign extension".

	* coders/sgi.c (ReadSGIImage, WriteSGIImage): Fix Coverity 10243,
	10244, 10247, 10254, and 10294 "Unintended sign extension".

2015-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXMakeImage): Quiet Coverity 10282
	"Unused value".

2015-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Another change targeting
	Coverity 44742 and 44746 "Unintended sign extension".

2015-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (TracePath): Fix Coverity 10258 "Uninitialized
	scalar variable".

	* magick/widget.c (MagickXFontBrowserWidget): Fix Coverity 10323
	"Sizeof not portable".  2nd try.

	* coders/xwd.c (ReadXWDImage): Fix Coverity 10095, 10100, 10104
	"Division or modulo by zero".  2nd try.

	* magick/analyze.c (GetImageCharacteristics): Fix Coverity 10096
	"Logically dead code".

	* coders/yuv.c (ReadYUVImage): Fix Coverity 10260 "Structurally
	dead code".

	* coders/xcf.c (ReadXCFImage): Fix Coverity 10226 "Missing break
	in switch".

	* coders/tim.c (ReadTIMImage): Fix Coverity 10249 "Unused value".

	* coders/tiff.c (CompressionSupported): Fix Coverity 44723
	"Logically dead code".
	(WriteTIFFImage): Fix Coverity 44742 and 44746 "Unintended sign
	extension".

	* coders/ps3.c (WritePS3Image): Validate results from TellBlob()