@@ -38,6 +38,8 @@
 <p>2015-04-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/resource.c (InitializeMagickResources): Silence Coverity
+10101 &quot;Logically dead code&quot;.</li>
 <li>magick/magick.c (MagickSignalHandlerMessage): Fix Coverity 44725
 &quot;Logically dead code&quot;.</li>
 <li>magick/log.c (DestroyLogInfo): Silence Coverity 53659 and 53661
